fix carousel overflow and carousel inner overlap

--- a/style/parallax.css
+++ b/style/parallax.css
@@ -12,7 +12,7 @@
   padding-left: 2em;
   display: flex;
   flex-flow: column nowrap;
-  height: 400vh;
+  min-height: 400vh;
   width: 90vw;
 
   /* Center child horizontally*/
@@ -26,7 +26,7 @@
   justify-content: center;
   flex-direction: column;
   flex-wrap: nowrap;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   max-width: 90%;
   text-align: left;
@@ -171,9 +171,9 @@ html {
 
 .carousel-inner {
     position: relative;
-    overflow: hidden;
+/*    overflow: hidden;*/
     width: 90%;
-    height: 90%;
+    min-height: 90%;
     display: flex;
     justify-content: center;
 }
@@ -183,14 +183,14 @@ html {
     opacity: 100;
     z-index: 10;
     width: 90%;
-    height: 90%;
+    min-height: 90%;
 }
 
 .carousel-item {
     position: absolute;
     opacity: 0;
     width: 90%;
-    height: 90%;
+    min-height: 90%;
     display: flex;
     justify-content: center;
 }
@@ -206,7 +206,7 @@ html {
     display: flex;
     font-size: 1.25em;
     width: 90%;
-    height: 90%;
+    min-height: 90%;
   }
 }
 
@@ -222,9 +222,10 @@ html {
 /*    position: absolute;*/
 /*     display: inline-block;
     justify-self: center; */
-    height: 90%;
+    min-height: 90%;
   width: 80%;
 /*   border: solid; */
+padding-bottom: 1em;
 }
 
 .carousel-control {
